temporary fix on horizontal bleed

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -22,7 +22,7 @@ section.hero {
 }
 
 .hero .image-wrapper {
-    background-color: var(--primary-green);
+    background-color: var(--tertiary-pink);
     width: 100%;
     height: 22rem;
 }
@@ -53,7 +53,6 @@ section.hero {
     }
 
     .hero .image-wrapper {
-        background-color: var(--primary-green);
         width: 32rem;
         height: 41rem;
     }
